TEST_PROGRAMS/INVALID/Terrence_Ko/openparen.min
var n: int;

n=((n)+3+n*5+(7)+(9);

